--- a/README
+++ b/README
@@ -1,1 +1,11 @@
+#GlycoRDF
+
 GlycoRDF is a standard representation for storing Glycomcis data (glycan structures, publication information, biological source information, experimental data) in RDF. The RDF language is defined by an OWL ontology and documented in the ontology and generated WORD files. The repository also contains source code for the generation of RDF data for glycomics databases.
+
+## Current version
+Ontology: https://github.com/ReneRanzinger/GlycoRDF/blob/master/ontology/glycan.owl
+Documentation: https://github.com/ReneRanzinger/GlycoRDF/blob/master/ontology/documentation.docx
+
+## List of developers
+
+## List of databases
