added LC Device, similar to MS, and has_lc_model

--- a/ontology/1.2.3-20180411/changelog.txt
+++ b/ontology/1.2.3-20180411/changelog.txt
@@ -10,6 +10,9 @@
 * GlycoStore individual
  - type:Glycan Database
 
+* LC Device
+* has_lc_model
+
 ## Modified
 * Connections for Glycan Release an Glycosidase Treatment
  
